- 修复 JDK1.8 的 List 相关 BUG